--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,13 @@
     padding-top: 2.5em;
 }
 
+@font-face {
+    font-family: "IndieFlower";
+    src: url("Fonts/Indie_Flower/IndieFlower-Regular.ttf");
+  }
 
+h1 {
+    font-family: IndieFlower;
+}
 
 
