--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-[class*="col"] {
-    padding-top: 2.5em;
-}
-
 @font-face {
     font-family: "IndieFlower";
     src: url("Fonts/Indie_Flower/IndieFlower-Regular.ttf");
@@ -11,4 +7,20 @@ h1 {
     font-family: IndieFlower;
 }
 
+.navigaatiopalkki {
+    position:absolute;
+    left:0;
+    margin-top: -100px;
+    height: 87vh;
+    width: 150px;
+    overflow: hidden;
+}
 
+.navigaatiopalkki * {
+    color:black;
+    text-decoration: none;
+    padding: 5px;
+}
+.list-unstyled li {
+    padding-top:25px;
+}
