--- a/Matikka_JW/matikkaJW.css
+++ b/Matikka_JW/matikkaJW.css
@@ -4,16 +4,46 @@
     src: url("../Fonts/Indie_Flower/IndieFlower-Regular.ttf");
 }
 
-h1 {
+/*Header*/
+.container-fluid * {
+    justify-content:center;
+    align-items: center;
+}
+
+header {
+    background-color: #56CBF9;
+}
+
+header h1 {
     font-family: IndieFlower;
+    margin-top: 30px;
+}
+
+#headerimage {
+    max-width: 100px;
+    float: right;
+}
+
+/*Navbar*/
+.navbar-custom {
+    background-color: #81F4E1;
+}
+
+h2 {
+    font-family: IndieFlower;
+    margin-top: 30px;
 }
 
 [class*="col"] {
-    padding-top: 2.5em;
     border: 2px solid black;
 }
 
 .btn {
     background-color: #81F4E1;
     border: 2px solid #C841BA;
+}
+
+/*Footer*/
+footer {
+    background-color: #56CBF9;
 }
