--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,12 @@
     src: url("Fonts/Indie_Flower/IndieFlower-Regular.ttf");
   }
 
-h1 {
+header h1 {
+    font-family: IndieFlower;
+    margin-top: 30px;
+}
+
+h2 {
     font-family: IndieFlower;
 }
 
@@ -13,7 +18,7 @@ h1 {
 }
 
 header {
-    background-color: #C841BA;;
+    background-color: #56CBF9;;
 }
 
 #headerimage {
@@ -25,5 +30,5 @@ header {
     background-color: #81F4E1;
 }
 footer {
-    background-color: #81F4E1;
+    background-color: #56CBF9;
 }
