--- a/Englanti_MT/englanti.css
+++ b/Englanti_MT/englanti.css
@@ -7,18 +7,19 @@
   }
 
 /*Header*/
-.container-fluid * {
-    justify-content:center;
-    align-items: center;
+header {
+    background-color: #56CBF9;
 }
 
-header {
-    background-color: #C841BA;
+header h1 {
+    font-family: IndieFlower;
+    margin-top: 30px;
 }
 
 #headerimage {
     max-width: 100px;
     float: right;
+    margin-right: 20px;
 }
 
 /*Navbar*/
@@ -26,8 +27,13 @@ header {
     background-color: #81F4E1;
 }
 
+.container-fluid * {
+    justify-content:center;
+    align-items: center;
+}
+
 /*Instructions*/
-h1, h2 {
+.col h1, h2 {
     font-family: IndieFlower;
     margin: 5px;
 }
@@ -40,6 +46,7 @@ h1, h2 {
     background-size: 80% 80%;
     background-blend-mode: lighten;
     margin: 20px;
+    font-size: 20px;
 }
 
 #firstCol li {
@@ -47,9 +54,14 @@ h1, h2 {
 }
 
 /*Questions*/
+h5 {
+    margin-bottom: 15px;
+}
+
 #question {
     background-image: linear-gradient(#FF3374, white);
     font-weight: bold;
+    padding: 10px;
 }
 
 /*Radio-buttons and their text*/
@@ -72,6 +84,7 @@ h1, h2 {
     visibility: hidden;
     border: solid #FF3374;
     padding: 5px;
+    margin-top: 10px;
 }
 
 /*Points*/
@@ -85,12 +98,14 @@ h1, h2 {
     visibility: hidden;
     border: solid #FF3374;
     padding: 5px;
+    margin-top: 10px;
 }
 
 /*Bonusquestion*/
 #bonusHeader {
     font-family: IndieFlower;
-    margin: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #bonusbutton {
@@ -100,8 +115,10 @@ h1, h2 {
 }
 
 #bonusresult {
-    border-bottom: 1px solid #8F002B;
     padding-bottom: 5px;
+    margin-top: 10px;
+    font-style: oblique;
+    font-size: 1.5em;
 }
 
 #image {
@@ -118,5 +135,7 @@ h1, h2 {
 
 /*Footer*/
 footer {
-    background-color: #81F4E1;
+    background-color: #56CBF9;
+    padding: 20px;
+    font-size: 0.75em;
 }
