--- a/Tietoja_sivu/tietoja.css
+++ b/Tietoja_sivu/tietoja.css
@@ -22,6 +22,7 @@ header h1 {
 #headerimage {
     max-width: 100px;
     float: right;
+    margin-right: 20px;
 }
 
 /*Navbar*/
@@ -62,4 +63,5 @@ ul {
 footer {
     background-color: #56CBF9;
     padding: 20px;
+    font-size: 0.75em;
 }
