--- a/Englanti_MT/englanti.css
+++ b/Englanti_MT/englanti.css
@@ -127,6 +127,10 @@ h5 {
     color: white;
   }
 
+#bigben {
+    max-width: 600px;
+}
+
 .bottom-right {
     position: absolute;
     bottom: 8px;
