--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,7 @@ header h1 {
     font-family: IndieFlower;
     margin-top: 30px;
 }
-
-h2 {
+h2, .fonttivaihtoon {
     font-family: IndieFlower;
 }
 
