--- a/Matikka_SV/sv.css
+++ b/Matikka_SV/sv.css
@@ -1,17 +1,19 @@
-span#eka {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-}
-
 span {
     font-weight: bold;
     color: rgb(255, 255, 255);
+    font-family: IndieFlower;
 }
+h3 {
+    font-family: IndieFlower;
+}
+
 body {
     background-color: #81F4E1;
 }
 [class="col-md-6  mb-5 text-center"] {
     font-size: 1.5em;
     color: white;
+    user-select: none;
 }
 [class="container border bg-grey bg-light"] {
     background-image:url(https://cdn.pixabay.com/photo/2015/09/03/05/52/green-background-920072_960_720.jpg);
@@ -38,4 +40,8 @@ button:hover {
 [class="mb-5 fonttivaihtoon text-center"] {
     border-bottom: 1px solid;
     border-radius: 25%;
+}
+
+#vasemmalle {
+    padding-right: 50px;
 }
