--- a/Matikka_SV/sv.css
+++ b/Matikka_SV/sv.css
@@ -17,21 +17,31 @@ body {
 }
 [class="container border bg-grey bg-light"] {
     background-image:url(https://cdn.pixabay.com/photo/2015/09/03/05/52/green-background-920072_960_720.jpg);
-    background-size:     cover;                      /* <------ */
+    background-size:     cover;                   
     background-repeat:   no-repeat;
     background-position: center center;
 }
+
 input {
+    background-color:black;
     opacity: 0.5;
     border-radius: 20%;
+    color:White;
+    font-family: IndieFlower;
 }
+/* Alempi koodi kopioitu oheiselta nettisivulta, poistamaan nuolet input type number laatikoista. -- >https://www.w3schools.com/howto/howto_css_hide_arrow_number.asp */
+input::-webkit-outer-spin-button,input::-webkit-inner-spin-button {   
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 input:hover {
     border-color: rgb(0, 253, 63);
 }
-h1 {
+[class="mb-5 fonttivaihtoon text-center py-2"] {
     color: white;
+    user-select: none;
 }
-
 button:hover {
     color: white;
     user-select: none;
@@ -43,5 +53,5 @@ button:hover {
 }
 
 #vasemmalle {
-    padding-right: 50px;
+    padding-right: 70px;
 }
